tests/expectations/compiler/mappings/shadowed_mapping_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372009]: variable `one` shadowed by
    --> compiler-test:6:5
     |
   6 |     mapping one: field => field;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EAST0372009]: variable `one` shadowed by
    --> compiler-test:8:5
     |
   8 |     transition one() -> u8 {
   9 |         return 1u8 + 1u8;
  10 |     }
     |     ^
"""]
